[package]
name = "bot"
version = "0.1.0"
authors = ["Maxime Madau <maxime.madau@smile.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.7.1"

[dependencies]
phf= { version = "0.8", features = ["macros"] }
reqwest = { version = "0.9" }
serde = {version ="1.0", features = ["derive"]}
serde_json ="1.0"
serde_derive ="1.0"
